# games-of-terminal

./: .gitignore  LICENCE  LICENSE  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: linter-check.yml  project-check.yml
config/: curses_color_map.yml
docs/: achievements.md  contributing-guide.md  contributing_guide.md  creating-your-own-game.md  developer-guide.md  frequently-asked-questions.md  issue-reporting-guide.md  issue_reporting_guide.md  upcoming-features.md
games/snake/: common.py  core.py  food.py  score.py
games_of_terminal/: achievement_manager.py  achievements_manager.py  app_interface.py  colors.py  constants.py  curses_colors.yml  field.py  interface_manager.py  log.py  logic.txt  sub_window.py  utils.py
games_of_terminal/data/: achievements.json  game_statistics.json  settings.json
games_of_terminal/database/: achievements.py  common.py  constants.py  database.py  database_new.py  models.py  queries.py
games_of_terminal/games/: achievements_manager.py  app_interface.py  cell.py  colors.py  constants.py  engine.py  game_stats.py  lab.py
games_of_terminal/games/menu/: constants.py  core.py
games_of_terminal/games/minesweeper/: achievements_manager.py  cell.py  common.py  constants.py  core.py
games_of_terminal/games/snake/: achievements_manager.py  constants.py  core.py  score.py
games_of_terminal/games/tetris/: achievements_manager.py  block.py  cell.py  constants.py  core.py  game_board.py  next_block.py
games_of_terminal/games/tictactoe/: achievements_manager.py  cell.py  click.py  constants.py  core.py
games_of_terminal/menu/: constants.py  core.py
games_of_terminal/scripts/: app.py
games_of_terminal/settings/: constants.py  core.py  placeholder_stub.py
games_of_terminal/settings/achievements/: achievement.py  constants.py  core.py
games_of_terminal/settings/all_settings/: achievements.py  confess_all.py  constants.py  core.py  games_settings.py  option_choosing.py  reset_all.py  statistics.py  user_preferences.py  username_editing.py
games_of_terminal/settings/confess_all/: constants.py  core.py
games_of_terminal/settings/games_settings/: core.py
games_of_terminal/settings/reset_all/: constants.py  core.py
terminal_games/: colors.yml
terminal_games/games/: constants.py  engine.py  menu.py
terminal_games/scripts/: app.py  minesweeper_game.py  snake_game.py  tetris_game.py  tictactoe_game.py
tests/: conftest.py  test_utils.py
(+16 files in other folders)
