[tool.poetry]
name = "terminal-games"
version = "0.1.0"
description = "Games for terminal: Snake, Tic-tac-toe, Minesweeper and Chess"
license = "Proprietary"
authors = ["Luybov Nikitina <zluyba.nikitina@gmail.com>"]
readme = "README.md"
packages = [{include = "terminal_games"}]
classifiers = [
    "Environment :: Console",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Topic :: Games/Entertainment"
]

[tool.poetry.scripts]
term-games = "terminal_games.scripts.app:main"

[tool.poetry.dependencies]
python = "^3.9"
board = "^1.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
