[tool.poetry]
name = "terminal-games"
version = "0.1.0"
description = "Games for terminal: Tetris, Minesweeper, Snake and Tic-tac-toe"
license = "MIT"
authors = ["Luybov Nikitina <zluyba.nikitina@gmail.com>"]
readme = "README.md"
packages = [{include = "games_of_terminal"}]
classifiers = [
    "Topic :: Games/Entertainment",
    "Topic :: Terminals",
    "Environment :: Console",
    "Natural Language :: English",
    "Programming Language :: Python"
]

[tool.poetry.scripts]
got-games = "games_of_terminal.scripts.app:main"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^8.1.1"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
