[tool.poetry]
name = "games-of-terminal"
version = "0.1.0"
description = "Mini games for console environment with statistics, achievements and flexibility."
license = "MIT"
authors = ["Luybov Nikitina <zluyba.nikitina@gmail.com>"]
readme = "README.md"
packages = [{include = "games_of_terminal"}]
classifiers = [
    "Topic :: Games/Entertainment",
    "Topic :: Terminals",
    "Environment :: Console",
    "Natural Language :: English",
    "Programming Language :: Python"
]

[tool.poetry.scripts]
got-games = "games_of_terminal.scripts.app:main"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^8.1.1"
mypy = "^1.9.0"

[tool.mypy]
exclude = ['database_new.py', 'models.py', 'games_of_terminal/lab/']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
